tests/lexer/lexer-invalid-char.swg
// swc-option lex-only

¤ // swc-expected-error InvalidCharacter